--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src"
+            "App\\": "src",
+            "Tests\\": "tests"
         }
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
     }
 }
